--- a/MvcMovie/MvcMovie.csproj
+++ b/MvcMovie/MvcMovie.csproj
@@ -137,6 +137,10 @@
     <Compile Include="Migrations\202209230944239_Initial.designer.cs">
       <DependentUpon>202209230944239_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202209231003425_Rating.cs" />
+    <Compile Include="Migrations\202209231003425_Rating.designer.cs">
+      <DependentUpon>202209231003425_Rating.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -204,6 +208,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202209230944239_Initial.resx">
       <DependentUpon>202209230944239_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202209231003425_Rating.resx">
+      <DependentUpon>202209231003425_Rating.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
