新增驗證輸入

--- a/MvcMovie/MvcMovie.csproj
+++ b/MvcMovie/MvcMovie.csproj
@@ -141,6 +141,10 @@
     <Compile Include="Migrations\202209231003425_Rating.designer.cs">
       <DependentUpon>202209231003425_Rating.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202209231206369_DataAnnotations.cs" />
+    <Compile Include="Migrations\202209231206369_DataAnnotations.designer.cs">
+      <DependentUpon>202209231206369_DataAnnotations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -211,6 +215,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202209231003425_Rating.resx">
       <DependentUpon>202209231003425_Rating.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202209231206369_DataAnnotations.resx">
+      <DependentUpon>202209231206369_DataAnnotations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
