--- a/MvcMovie/MvcMovie.csproj
+++ b/MvcMovie/MvcMovie.csproj
@@ -150,27 +150,64 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap-theme.css" />
-    <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\maicons.css" />
+    <Content Include="Content\theme.css" />
     <Content Include="favicon.ico" />
-    <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\maicons.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
-    <None Include="Scripts\jquery-3.4.1.intellisense.js" />
-    <Content Include="Scripts\jquery-3.4.1.js" />
-    <Content Include="Scripts\jquery-3.4.1.min.js" />
-    <Content Include="Scripts\jquery-3.4.1.slim.js" />
-    <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Content\theme.css.map" />
+    <Content Include="img\about.jpg" />
+    <Content Include="img\bg_image_1.jpg" />
+    <Content Include="img\bg_image_2.jpg" />
+    <Content Include="img\bg_image_3.jpg" />
+    <Content Include="img\clients\airbnb.png" />
+    <Content Include="img\clients\google.png" />
+    <Content Include="img\clients\mailchimp.png" />
+    <Content Include="img\clients\paypal.png" />
+    <Content Include="img\clients\stripe.png" />
+    <Content Include="img\icons\app_development.svg" />
+    <Content Include="img\icons\customer_services.svg" />
+    <Content Include="img\icons\data_analyst.svg" />
+    <Content Include="img\icons\graphics_design.svg" />
+    <Content Include="img\icons\product_design.svg" />
+    <Content Include="img\icons\seo_and_marketing.svg" />
+    <Content Include="img\icons\ui_ux_design.svg" />
+    <Content Include="img\icons\web_development.svg" />
+    <Content Include="img\person\person_1.jpg" />
+    <Content Include="img\person\person_2.jpg" />
+    <Content Include="img\person\person_3.jpg" />
+    <Content Include="img\person\person_4.jpg" />
+    <Content Include="img\portfolio\work-1.jpg" />
+    <Content Include="img\portfolio\work-2.jpg" />
+    <Content Include="img\portfolio\work-3.jpg" />
+    <Content Include="img\portfolio\work-4.jpg" />
+    <Content Include="img\portfolio\work-5.jpg" />
+    <Content Include="img\portfolio\work-6.jpg" />
+    <Content Include="img\portfolio\work-7.jpg" />
+    <Content Include="img\portfolio\work-8.jpg" />
+    <Content Include="img\portfolio\work-9.jpg" />
+    <Content Include="img\teams\team_1.jpg" />
+    <Content Include="img\teams\team_2.jpg" />
+    <Content Include="img\teams\team_3.jpg" />
+    <Content Include="Scripts\js\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\js\google-maps.js" />
+    <Content Include="Scripts\js\jquery-3.5.1.min.js" />
+    <Content Include="Scripts\js\theme.js" />
+    <Content Include="Scripts\vendor\animate\animate.css" />
+    <Content Include="Scripts\vendor\fancybox\css\jquery.fancybox.css" />
+    <Content Include="Scripts\vendor\fancybox\css\jquery.fancybox.min.css" />
+    <Content Include="Scripts\vendor\fancybox\js\jquery.fancybox.js" />
+    <Content Include="Scripts\vendor\fancybox\js\jquery.fancybox.min.js" />
+    <Content Include="Scripts\vendor\isotope\isotope.pkgd.js" />
+    <Content Include="Scripts\vendor\isotope\isotope.pkgd.min.js" />
+    <Content Include="Scripts\vendor\owl-carousel\css\owl.carousel.css" />
+    <Content Include="Scripts\vendor\owl-carousel\css\owl.carousel.min.css" />
+    <Content Include="Scripts\vendor\owl-carousel\css\owl.theme.default.css" />
+    <Content Include="Scripts\vendor\owl-carousel\css\owl.theme.default.min.css" />
+    <Content Include="Scripts\vendor\owl-carousel\js\owl.carousel.js" />
+    <Content Include="Scripts\vendor\owl-carousel\js\owl.carousel.min.js" />
+    <Content Include="Scripts\vendor\wow\wow.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -197,17 +234,10 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
-    <Content Include="Content\bootstrap.min.css.map" />
-    <Content Include="Content\bootstrap.css.map" />
-    <Content Include="Content\bootstrap-theme.min.css.map" />
-    <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="fonts\maicons.eot" />
+    <Content Include="fonts\maicons.ttf" />
+    <Content Include="fonts\maicons.woff" />
     <None Include="packages.config" />
-    <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
-    <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202209230944239_Initial.resx">
